# dane-gov-pl-mcp

./: .gitignore  Makefile  README.md  Update_categories.py  pyproject.toml
data/: categories_unique.csv  category_unique.csv
examples/: stream_download.py
exploration/: datasets.ipynb  resources.ipynb
src/: app.py
src/prompts/: instructions.md
src/tools/: datasets.py  institutions.py  lookup.py  parsers.py  resources.py  showcases.py  tabular.py  utils.py
src/utils/: server_config.py
